# xmltree-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: coverage.yml  pre-commit.yaml  rust.yaml
src/: lib.rs
tests/: suite.rs
tests/data/: 02.xml  03.xml  04.xml  05.xml  multi-attribute-ns.xml
